--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <!-- partial:index.partial.html -->
 <a class="download" href="#platforms"></a>
 <div class="platforms" id="platforms">
-	<a href="#windows" data-os="windows"></a>
+	<a href="#windows" data-os="Windows"></a>
 </div>
 <div class="installer" id="windows">
-	<div class="info" data-weight="70 MB"></div>
+	<div class="info" data-weight="170 MB"></div>
 	<div class="details">
 		<p>Windows installer</p>
-		<span>Version 1.5.0</span>
+		<span>Version 2.5.0</span>
 		<ul>
-			<li>EVA Engine 1.5</li>		
+			<li>EVA Engine 2.5</li>		
 		</ul>
 	</div>
 	<label for="progressWindows"><input type="radio" id="progressWindows"/><span></span></label>
