--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es" >
 <head>
   <meta charset="UTF-8">
-  <title>Actualizacion</title>
+  <title>Actualización</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Varela+Round'>
 <link rel='stylesheet' href='https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css'><link rel="stylesheet" href="./style.css">
 
@@ -16,7 +16,7 @@
 <div class="installer" id="windows">
 	<div class="info" data-weight="170 MB"></div>
 	<div class="details">
-		<p>Windows installer</p>
+		<p>Windows Installer</p>
 		<span>Version 2.5.0</span>
 		<ul>
 			<li>EVA Engine 2.5</li>		
